Fix header spacing bug

--- a/ui/style/main.css
+++ b/ui/style/main.css
@@ -161,8 +161,8 @@ body {
 }
 
 #toolbar {
-  margin: 0.8rem 1rem 1rem 1rem;
-  padding-bottom: 0.5rem;
+  margin: 1.2rem 1rem 1rem 1rem;
+  height: 6.5rem;
   display: flex;
   overflow: auto;
   /* General */
@@ -174,7 +174,7 @@ body {
   /* Help */
 }
 #toolbar > li {
-  margin-right: 1.5rem;
+  margin-right: 1rem;
   flex-shrink: 0;
 }
 #toolbar > li > p {
@@ -230,18 +230,18 @@ body {
 }
 #toolbar ul li {
   border: 1px solid transparent;
-  padding: 0.6rem 1.8rem 0.4rem 0.7rem;
+  padding: 0.7rem 1.9rem 0.5rem 0.8rem;
   color: #e2e2e2;
   transition: opacity 0.1s;
-  margin-right: -0.15rem;
 }
 #toolbar ul li p {
   font-size: 11px;
 }
+#toolbar ul li.active, #toolbar ul li:hover {
+  border-radius: 0.2rem;
+}
 #toolbar ul li:hover {
   color: #fff;
-  border-radius: 0.2rem;
-  box-shadow: 0 0.2rem 0.5rem #0000008f;
 }
 #toolbar ul li:active {
   opacity: 0.75;
@@ -250,7 +250,7 @@ body {
   width: 10px;
   height: 10px;
   display: block;
-  margin-bottom: 0.2rem;
+  margin-bottom: 0.35rem;
 }
 
 main {
